# ilo-muni-scraps

./: .gitignore  constants.py
distance_check/: .gitignore  pyproject.toml  script.py
language_percent/: .gitignore  Makefile  constants.py  pyproject.toml  script.py
phoneme_count/: script.py
