[project]
name = "one-char-dist-check"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Gregory Danielson",email = "gregory.danielson3@gmail.com"},
]
dependencies = ["symspellpy>=6.9.0", "requests>=2.34.2", "weighted-levenshtein>=0.2.2", "numpy>=2.5.0"]
requires-python = "==3.14.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
